--- a/bsd/socket/Makefile.master
+++ b/bsd/socket/Makefile.master
@@ -2,7 +2,7 @@
 # Builds client for all supported platforms
 
 # Subdirectories for each platform
-SUBDIRS = 211BSD NetBSDx64 NetBSDVAX
+SUBDIRS = arch/211BSD arch/NetBSDx64 arch/NetBSDVAX arch/macOS
 
 # Default target - build all platforms
 all:
@@ -25,15 +25,19 @@ clean:
 # Build specific platform
 211bsd:
 	@echo "Building 211BSD client..."
-	@$(MAKE) -C 211BSD all
+	@$(MAKE) -C arch/211BSD all
 
 netbsdx64:
 	@echo "Building NetBSD x64 client..."
-	@$(MAKE) -C NetBSDx64 all
+	@$(MAKE) -C arch/NetBSDx64 all
 
 netbsdvax:
 	@echo "Building NetBSD VAX client..."
-	@$(MAKE) -C NetBSDVAX all
+	@$(MAKE) -C arch/NetBSDVAX all
+
+macos:
+	@echo "Building macOS client..."
+	@$(MAKE) -C arch/macOS all
 
 # Install all platforms
 install:
@@ -52,7 +56,8 @@ help:
 	@echo "  211bsd     - Build only 211BSD client"
 	@echo "  netbsdx64  - Build only NetBSD x64 client"
 	@echo "  netbsdvax  - Build only NetBSD VAX client"
+	@echo "  macos      - Build only macOS client"
 	@echo "  install    - Install all clients"
 	@echo "  help       - Show this help"
 
-.PHONY: all clean 211bsd netbsdx64 netbsdvax install help
+.PHONY: all clean 211bsd netbsdx64 netbsdvax macos install help
